--- a/style/scss/base/_base.scss
+++ b/style/scss/base/_base.scss
@@ -1,5 +1,6 @@
 body {
   background: $bg;
+  z-index: -10;
 }
 * {
   margin: 0;
